@startuml
hide circle
skinparam linetype ortho
skinparam classAttributeIconSize 0

entity "car_brands" as car_brands {
  * brand_id : BIGINT <<PK>>
  --
  * brand_name : VARCHAR(100)
  * manufacturer_name : VARCHAR(120)
}

entity "cars" as cars {
  * car_id : BIGINT <<PK>>
  --
  * brand_id : BIGINT <<FK>>
  * registration_number : VARCHAR(20) <<UQ>>
  * engine_volume_l : DECIMAL(3,1)
  * engine_power_hp : INTEGER
  * fuel_consumption_l_100km : DECIMAL(4,1)
  * doors_count : SMALLINT
  * seats_count : SMALLINT
  * trunk_capacity_l : INTEGER
  * transmission_type : VARCHAR(16)
  * has_cruise_control : BOOLEAN
  * required_fuel : VARCHAR(20)
  * has_air_conditioner : BOOLEAN
  * has_radio : BOOLEAN
  * has_video_system : BOOLEAN
  * has_gps : BOOLEAN
  * interior_trim : VARCHAR(80)
  * color : VARCHAR(50)
  * mileage_km : INTEGER
  * last_service_date : DATE
  * price : DECIMAL(12,2)
}

entity "clients" as clients {
  * client_id : BIGINT <<PK>>
  --
  * full_name : VARCHAR(200)
  * address : VARCHAR(300)
  * phone : VARCHAR(32) <<UQ>>
  * email : VARCHAR(120) <<UQ>>
}

entity "orders" as orders {
  * order_id : BIGINT <<PK>>
  --
  * ordered_at : TIMESTAMP
  * client_id : BIGINT <<FK>>
  o car_id : BIGINT <<FK>>
  * need_test_drive : BOOLEAN
  * status : VARCHAR(24)
}

entity "order_requirements" as order_requirements {
  * order_id : BIGINT <<PK, FK>>
  --
  o desired_brand_id : BIGINT <<FK>>
  o desired_engine_volume_min : DECIMAL(3,1)
  o desired_engine_power_min : INTEGER
  o desired_transmission_type : VARCHAR(16)
  o desired_required_fuel : VARCHAR(20)
  o desired_color : VARCHAR(50)
  o desired_price_max : DECIMAL(12,2)
  o comment_text : LONGVARCHAR
}

entity "test_drives" as test_drives {
  * test_drive_id : BIGINT <<PK>>
  --
  * client_id : BIGINT <<FK>>
  * car_id : BIGINT <<FK>>
  * test_drive_at : TIMESTAMP
  * notes : VARCHAR(300)
}

car_brands ||--o{ cars : brand_id
clients ||--o{ orders : client_id
cars ||--o{ orders : car_id
orders ||--|| order_requirements : order_id
car_brands ||--o{ order_requirements : desired_brand_id
clients ||--o{ test_drives : client_id
cars ||--o{ test_drives : car_id

@enduml
